--- a/build.gradle
+++ b/build.gradle
@@ -6,5 +6,6 @@ repositories {
 }
 
 dependencies {
+	compile 'org.apache.commons:commons-lang3:3.3.1'
 	runtime fileTree(dir: 'lib', include: '*.jar')
 }
